Remove forgot pw and reset pw apis
